feat: modernize demographic model to PatientContext v1.1.0
